@@ -1,7 +1,7 @@
 Begin3
 Title:         kppp - a dialer and pppd front-end
-Version:       1.6.14
-Entered-date:  13JUN99
+Version:       1.6.25
+Entered-date:  23FEB2000
 Description:   A fancy dialer and front-end to pppd 
 Keywords:      KDE, Qt, gui, X11, pppd, ppp, dialer, PAP, CHAP
 Author:        wuebben@kde.org (Bernd Johannes Wuebben)
@@ -10,7 +10,7 @@ Maintained-by: porten@kde.org (Harri Porten)
 Primary-site:  ftp.kde.org /pub/kde/stable/latest/distribution
 Home-Page:     http://devel-home.kde.org/kppp/index.html
 Alternate-site:http://devel-home.kde.org /kppp
-               792 kB kppp-1.6.14.tar.bz2
+               792 kB kppp-1.6.25.tar.bz2
 Platform:      Unix with pppd, Qt 1.42 or higher, KDE 1.1.x
 Copying-policy: GPL 
 End
